5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4422/executions/1800_2566.log
== TEST (2019-06-10 18:23:38) 
-- CODE:
for numpy import *
df = array(eval(input("dias que faltou: ")))

n = zeros(6, dtype = int)

print(n)
-- ERROR:
File "XXXX", line 1
    for numpy import *
                   ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-10 18:23:45) 
-- CODE:
from numpy import *
df = array(eval(input("dias que faltou: ")))

n = zeros(6, dtype = int)

print(n)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-10 18:23:49) 
-- CODE:
from numpy import *
df = array(eval(input("dias que faltou: ")))

n = zeros(6, dtype = int)

print(n)
-- EXECUTION TIME:
1.49307
-- TEST CASE 1:
---- input:
[2,2,2,5,5,5,6,6,6,6,7,7,7,7,7,7]
---- correct output:
[18.8 0. 0. 18.8 25. 37.5]
---- user output:
dias que faltou: [0 0 0 0 0 0]
-- TEST CASE 2:
---- input:
[2,3,3,4,4,4,4,5,5,5,5,5,6,6,6,6,6,7,7,7,7,7,7,7,7]
---- correct output:
[ 4. 8. 16. 20. 20. 32.]
---- user output:
dias que faltou: [0 0 0 0 0 0]
-- TEST CASE 3:
---- input:
[2,2,3,4,4,4,5,6,6,7,7,7,7]
---- correct output:
[15.4 7.7 23.1 7.7 15.4 30.8]
---- user output:
dias que faltou: [0 0 0 0 0 0]
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-10 18:33:21) 
-- CODE:
from numpy import *
df = array(eval(input("dias que faltou: ")))

n = zeros(6, dtype = int)

for e in range(size(df)):
	if(df[e] == 2):
		n[0] = n[0] + 1
	elif(df[e] == 3):
		n[1] = n[1] + 1
	elif(df[e] == 4):
		n[2] = n[2] + 1
	elif(df[e] == 5):
		n[3] == n[3] + 1
	elif(df[e] == 6):
		n[4] = n[4] + 1
	elif(df[e] == 7):
		n[5] = n[5] + 1
print(n)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-10 18:33:24) 
-- CODE:
from numpy import *
df = array(eval(input("dias que faltou: ")))

n = zeros(6, dtype = int)

for e in range(size(df)):
	if(df[e] == 2):
		n[0] = n[0] + 1
	elif(df[e] == 3):
		n[1] = n[1] + 1
	elif(df[e] == 4):
		n[2] = n[2] + 1
	elif(df[e] == 5):
		n[3] == n[3] + 1
	elif(df[e] == 6):
		n[4] = n[4] + 1
	elif(df[e] == 7):
		n[5] = n[5] + 1
print(n)
-- EXECUTION TIME:
1.59546
-- TEST CASE 1:
---- input:
[2,2,2,5,5,5,6,6,6,6,7,7,7,7,7,7]
---- correct output:
[18.8 0. 0. 18.8 25. 37.5]
---- user output:
dias que faltou: [3 0 0 0 4 6]
-- TEST CASE 2:
---- input:
[2,3,3,4,4,4,4,5,5,5,5,5,6,6,6,6,6,7,7,7,7,7,7,7,7]
---- correct output:
[ 4. 8. 16. 20. 20. 32.]
---- user output:
dias que faltou: [1 2 4 0 5 8]
-- TEST CASE 3:
---- input:
[2,2,3,4,4,4,5,6,6,7,7,7,7]
---- correct output:
[15.4 7.7 23.1 7.7 15.4 30.8]
---- user output:
dias que faltou: [2 1 3 0 2 4]
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-10 18:33:33) 
-- CODE:
from numpy import *
df = array(eval(input("dias que faltou: ")))

n = zeros(6, dtype = int)

for e in range(size(df)):
	if(df[e] == 2):
		n[0] = n[0] + 1
	elif(df[e] == 3):
		n[1] = n[1] + 1
	elif(df[e] == 4):
		n[2] = n[2] + 1
	elif(df[e] == 5):
		n[3] == n[3] + 1
	elif(df[e] == 6):
		n[4] = n[4] + 1
	elif(df[e] == 7):
		n[5] = n[5] + 1
print(n)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-10 19:00:34) 
-- CODE:
from numpy import *
df = array(eval(input("dias que faltou: ")))

n = zeros(6, dtype = int)

for e in range(size(df)):
	if(df[e] == 2):
		n[0] = n[0] + 1
	elif(df[e] == 3):
		n[1] = n[1] + 1
	elif(df[e] == 4):
		n[2] = n[2] + 1
	elif(df[e] == 5):
		n[3] == n[3] + 1
	elif(df[e] == 6):
		n[4] = n[4] + 1
	elif(df[e] == 7):
		n[5] = n[5] + 1
for i in range(size(n)):
	if(n[0] > 0):
		n[0] = round(((n[0])/6), 2)
	elif(n[1] > 0):
		n[1] = round(((n[1])/6), 2)
	elif(n[2] > 0):
		n[2] = round(((n[2])/6), 2)
	elif(n[3] > 0):
		n[3] = round(((n[3])/6), 2)
	elif(n[4] > 0):
		n[4] = round(((n[4])/6), 2)
	elif(n[5] > 0):
		n[5] = round(((n[5])/6), 2)
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-10 19:00:41) 
-- CODE:
from numpy import *
df = array(eval(input("dias que faltou: ")))

n = zeros(6, dtype = int)

for e in range(size(df)):
	if(df[e] == 2):
		n[0] = n[0] + 1
	elif(df[e] == 3):
		n[1] = n[1] + 1
	elif(df[e] == 4):
		n[2] = n[2] + 1
	elif(df[e] == 5):
		n[3] == n[3] + 1
	elif(df[e] == 6):
		n[4] = n[4] + 1
	elif(df[e] == 7):
		n[5] = n[5] + 1
for i in range(size(n)):
	if(n[0] > 0):
		n[0] = round(((n[0])/6), 2)
	elif(n[1] > 0):
		n[1] = round(((n[1])/6), 2)
	elif(n[2] > 0):
		n[2] = round(((n[2])/6), 2)
	elif(n[3] > 0):
		n[3] = round(((n[3])/6), 2)
	elif(n[4] > 0):
		n[4] = round(((n[4])/6), 2)
	elif(n[5] > 0):
		n[5] = round(((n[5])/6), 2)
print(n)
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-10 19:01:00) 
-- CODE:
from numpy import *
df = array(eval(input("dias que faltou: ")))

n = zeros(6, dtype = int)

for e in range(size(df)):
	if(df[e] == 2):
		n[0] = n[0] + 1
	elif(df[e] == 3):
		n[1] = n[1] + 1
	elif(df[e] == 4):
		n[2] = n[2] + 1
	elif(df[e] == 5):
		n[3] == n[3] + 1
	elif(df[e] == 6):
		n[4] = n[4] + 1
	elif(df[e] == 7):
		n[5] = n[5] + 1
for i in range(size(n)):
	if(n[0] > 0):
		n[0] = round(((n[0])/6), 2)
	elif(n[1] > 0):
		n[1] = round(((n[1])/6), 2)
	elif(n[2] > 0):
		n[2] = round(((n[2])/6), 2)
	elif(n[3] > 0):
		n[3] = round(((n[3])/6), 2)
	elif(n[4] > 0):
		n[4] = round(((n[4])/6), 2)
	elif(n[5] > 0):
		n[5] = round(((n[5])/6), 2)
	print(n)
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-10 19:05:32) 
-- CODE:
from numpy import *
df = array(eval(input("dias que faltou: ")))

n = zeros(6, dtype = int)

for e in range(size(df)):
	if(df[e] == 2):
		n[0] = n[0] + 1
	elif(df[e] == 3):
		n[1] = n[1] + 1
	elif(df[e] == 4):
		n[2] = n[2] + 1
	elif(df[e] == 5):
		n[3] == n[3] + 1
	elif(df[e] == 6):
		n[4] = n[4] + 1
	elif(df[e] == 7):
		n[5] = n[5] + 1
for i in range(size(n)):
	if(size(n)==6):
		n[0] = round((n[0]/6), 2)
		n[1] = round((n[1]/6), 2)
		n[2] = round((n[2]/6), 2)
		n[3] = round((n[3]/6), 2)
		n[4] = round((n[4]/6), 2)
		n[5] = round((n[5]/6), 2)
print(n)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-10 19:06:07) 
-- CODE:
from numpy import *
df = array(eval(input("dias que faltou: ")))

n = zeros(6, dtype = int)

for e in range(size(df)):
	if(df[e] == 2):
		n[0] = n[0] + 1
	elif(df[e] == 3):
		n[1] = n[1] + 1
	elif(df[e] == 4):
		n[2] = n[2] + 1
	elif(df[e] == 5):
		n[3] == n[3] + 1
	elif(df[e] == 6):
		n[4] = n[4] + 1
	elif(df[e] == 7):
		n[5] = n[5] + 1
for i in range(size(n)):
	if(size(n)==6):
		n[0] = round((n[0]/6), 2)
		n[1] = round((n[1]/6), 2)
		n[2] = round((n[2]/6), 2)
		n[3] = round((n[3]/6), 2)
		n[4] = round((n[4]/6), 2)
		n[5] = round((n[5]/6), 2)
	print(n)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-10 19:06:35) 
-- CODE:
from numpy import *
df = array(eval(input("dias que faltou: ")))

n = zeros(6, dtype = int)

for e in range(size(df)):
	if(df[e] == 2):
		n[0] = n[0] + 1
	elif(df[e] == 3):
		n[1] = n[1] + 1
	elif(df[e] == 4):
		n[2] = n[2] + 1
	elif(df[e] == 5):
		n[3] == n[3] + 1
	elif(df[e] == 6):
		n[4] = n[4] + 1
	elif(df[e] == 7):
		n[5] = n[5] + 1
for i in range(size(n)):
	if(size(n)>0):
		n[0] = round((n[0]/6), 2)
		n[1] = round((n[1]/6), 2)
		n[2] = round((n[2]/6), 2)
		n[3] = round((n[3]/6), 2)
		n[4] = round((n[4]/6), 2)
		n[5] = round((n[5]/6), 2)
	print(n)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 10:21:08) 
-- CODE:
from numpy import *
df = array(eval(input("dias que faltou: ")))

n = zeros(6, dtype = int)

for e in range(size(df)):
	if(df[e] == 2):
		n[0] = n[0] + 1
		n[0] = n[0]/size(df)
	elif(df[e] == 3):
		n[1] = n[1] + 1
		n[1] = n[1]/size(df)
	elif(df[e] == 4):
		n[2] = n[2] + 1
		n[2] = n[2]/size(df)
	elif(df[e] == 5):
		n[3] == n[3] + 1
		n[3] = n[3]/size(df)
	elif(df[e] == 6):
		n[4] = n[4] + 1
		n[4] = n[4]/size(df)
	elif(df[e] == 7):
		n[5] = n[5] + 1
		n[5] = n[5]/size(df)
print(n)
	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 10:21:23) 
-- CODE:
from numpy import *
df = array(eval(input("dias que faltou: ")))

n = zeros(6, dtype = int)

for e in range(size(df)):
	if(df[e] == 2):
		n[0] = n[0] + 1
		n[0] = n[0]/size(df)
	elif(df[e] == 3):
		n[1] = n[1] + 1
		n[1] = n[1]/size(df)
	elif(df[e] == 4):
		n[2] = n[2] + 1
		n[2] = n[2]/size(df)
	elif(df[e] == 5):
		n[3] == n[3] + 1
		n[3] = n[3]/size(df)
	elif(df[e] == 6):
		n[4] = n[4] + 1
		n[4] = n[4]/size(df)
	elif(df[e] == 7):
		n[5] = n[5] + 1
		n[5] = n[5]/size(df)
	print(n)
	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 10:29:31) 
-- CODE:
from numpy import *
df = array(eval(input("dias que faltou: ")))

a = 0
b = 0
c = 0
d = 0
e = 0
f = 0

n = zeros(6, dtype = int)

for e in range(size(df)):
	if(df[e] == 2):
		a = a + 1
	elif(df[e] == 3):
		b = b + 1	
	elif(df[e] == 4):
		c = c + 1	
	elif(df[e] == 5):
		d = d + 1	
	elif(df[e] == 6):
		e = e + 1	
	elif(df[e] == 7):
		f = f + 1
		
n[0] = (a/size(n)) * 100
n[1] = (b/size(n)) * 100
n[2] = (c/size(n)) * 100
n[3] = (d/size(n)) * 100
n[4] = (e/size(n)) * 100
n[5] = (f/size(n)) * 100

print(n)
		

	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-11 10:29:45) 
-- CODE:
from numpy import *
df = array(eval(input("dias que faltou: ")))

a = 0
b = 0
c = 0
d = 0
e = 0
f = 0

n = zeros(6, dtype = int)

for e in range(size(df)):
	if(df[e] == 2):
		a = a + 1
	elif(df[e] == 3):
		b = b + 1	
	elif(df[e] == 4):
		c = c + 1	
	elif(df[e] == 5):
		d = d + 1	
	elif(df[e] == 6):
		e = e + 1	
	elif(df[e] == 7):
		f = f + 1
		
n[0] = (a/size(n)) * 100
n[1] = (b/size(n)) * 100
n[2] = (c/size(n)) * 100
n[3] = (d/size(n)) * 100
n[4] = (e/size(n)) * 100
n[5] = (f/size(n)) * 100

print(n)
		

	

-- EXECUTION TIME:
1.28342
-- TEST CASE 1:
---- input:
[2,2,2,5,5,5,6,6,6,6,7,7,7,7,7,7]
---- correct output:
[18.8 0. 0. 18.8 25. 37.5]
---- user output:
[ 50   0   0  50 250 100]
-- TEST CASE 2:
---- input:
[2,3,3,4,4,4,4,5,5,5,5,5,6,6,6,6,6,7,7,7,7,7,7,7,7]
---- correct output:
[ 4. 8. 16. 20. 20. 32.]
---- user output:
[ 16  33  66  83 400 133]
-- TEST CASE 3:
---- input:
[2,2,3,4,4,4,5,6,6,7,7,7,7]
---- correct output:
[15.4 7.7 23.1 7.7 15.4 30.8]
---- user output:
[ 33  16  50  16 200  66]
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 10:29:48) 
-- CODE:
from numpy import *
df = array(eval(input("dias que faltou: ")))

a = 0
b = 0
c = 0
d = 0
e = 0
f = 0

n = zeros(6, dtype = int)

for e in range(size(df)):
	if(df[e] == 2):
		a = a + 1
	elif(df[e] == 3):
		b = b + 1	
	elif(df[e] == 4):
		c = c + 1	
	elif(df[e] == 5):
		d = d + 1	
	elif(df[e] == 6):
		e = e + 1	
	elif(df[e] == 7):
		f = f + 1
		
n[0] = (a/size(n)) * 100
n[1] = (b/size(n)) * 100
n[2] = (c/size(n)) * 100
n[3] = (d/size(n)) * 100
n[4] = (e/size(n)) * 100
n[5] = (f/size(n)) * 100

print(n)
		

	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 10:31:17) 
-- CODE:
from numpy import *
df = array(eval(input("dias que faltou: ")))

a = 0
b = 0
c = 0
d = 0
e = 0
f = 0

n = zeros(6, dtype = int)

for e in range(size(df)):
	if(df[e] == 2):
		a = a + 1
	elif(df[e] == 3):
		b = b + 1	
	elif(df[e] == 4):
		c = c + 1	
	elif(df[e] == 5):
		d = d + 1	
	elif(df[e] == 6):
		e = e + 1	
	elif(df[e] == 7):
		f = f + 1
		
n[0] = round(((a/size(n)) * 100), 1)
n[1] = round(((b/size(n)) * 100), 1)
n[2] = round(((c/size(n)) * 100), 1)
n[3] = round(((d/size(n)) * 100), 1)
n[4] = round(((e/size(n)) * 100), 1)
n[5] = round(((f/size(n)) * 100), 1)

print(n)
		

	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 10:32:06) 
-- CODE:
from numpy import *
df = array(eval(input("dias que faltou: ")))

a = 0
b = 0
c = 0
d = 0
e = 0
f = 0

n = zeros(6, dtype = int)

for e in range(size(df)):
	if(df[e] == 2):
		a = a + 1
	elif(df[e] == 3):
		b = b + 1	
	elif(df[e] == 4):
		c = c + 1	
	elif(df[e] == 5):
		d = d + 1	
	elif(df[e] == 6):
		e = e + 1	
	elif(df[e] == 7):
		f = f + 1
		
n[0] = round(((a/size(df)) * 100), 1)
n[1] = round(((b/size(df)) * 100), 1)
n[2] = round(((c/size(df)) * 100), 1)
n[3] = round(((d/size(df)) * 100), 1)
n[4] = round(((e/size(df)) * 100), 1)
n[5] = round(((f/size(df)) * 100), 1)

print(n)
		

	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 10:32:18) 
-- CODE:
from numpy import *
df = array(eval(input("dias que faltou: ")))

a = 0
b = 0
c = 0
d = 0
e = 0
f = 0

n = zeros(6, dtype = int)

for e in range(size(df)):
	if(df[e] == 2):
		a = a + 1
	elif(df[e] == 3):
		b = b + 1	
	elif(df[e] == 4):
		c = c + 1	
	elif(df[e] == 5):
		d = d + 1	
	elif(df[e] == 6):
		e = e + 1	
	elif(df[e] == 7):
		f = f + 1
		
n[0] = round(((a/size(df)) * 100), 1)
n[1] = round(((b/size(df)) * 100), 1)
n[2] = round(((c/size(df)) * 100), 1)
n[3] = round(((d/size(df)) * 100), 1)
n[4] = round(((e/size(df)) * 100), 1)
n[5] = round(((f/size(df)) * 100), 1)

print(n)
		

	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-11 10:32:20) 
-- CODE:
from numpy import *
df = array(eval(input("dias que faltou: ")))

a = 0
b = 0
c = 0
d = 0
e = 0
f = 0

n = zeros(6, dtype = int)

for e in range(size(df)):
	if(df[e] == 2):
		a = a + 1
	elif(df[e] == 3):
		b = b + 1	
	elif(df[e] == 4):
		c = c + 1	
	elif(df[e] == 5):
		d = d + 1	
	elif(df[e] == 6):
		e = e + 1	
	elif(df[e] == 7):
		f = f + 1
		
n[0] = round(((a/size(df)) * 100), 1)
n[1] = round(((b/size(df)) * 100), 1)
n[2] = round(((c/size(df)) * 100), 1)
n[3] = round(((d/size(df)) * 100), 1)
n[4] = round(((e/size(df)) * 100), 1)
n[5] = round(((f/size(df)) * 100), 1)

print(n)
		

	

-- EXECUTION TIME:
1.07146
-- TEST CASE 1:
---- input:
[2,2,2,5,5,5,6,6,6,6,7,7,7,7,7,7]
---- correct output:
[18.8 0. 0. 18.8 25. 37.5]
---- user output:
[18  0  0 18 93 37]
-- TEST CASE 2:
---- input:
[2,3,3,4,4,4,4,5,5,5,5,5,6,6,6,6,6,7,7,7,7,7,7,7,7]
---- correct output:
[ 4. 8. 16. 20. 20. 32.]
---- user output:
dias que faltou: [ 4  8 16 20 96 32]
-- TEST CASE 3:
---- input:
[2,2,3,4,4,4,5,6,6,7,7,7,7]
---- correct output:
[15.4 7.7 23.1 7.7 15.4 30.8]
---- user output:
dias que faltou: [15  7 23  7 92 30]
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 10:33:41) 
-- CODE:
from numpy import *
df = array(eval(input("dias que faltou: ")))

a = 0
b = 0
c = 0
d = 0
e = 0
f = 0

n = zeros(6, dtype = int)

for e in range(size(df)):
	if(df[e] == 2):
		a = a + 1
	elif(df[e] == 3):
		b = b + 1	
	elif(df[e] == 4):
		c = c + 1	
	elif(df[e] == 5):
		d = d + 1	
	elif(df[e] == 6):
		e = e + 1	
	elif(df[e] == 7):
		f = f + 1
		
n[0] = round(((a/size(df)) * 100), 1)
n[1] = round(((b/size(df)) * 100), 1)
n[2] = round(((c/size(df)) * 100), 1)
n[3] = round(((d/size(df)) * 100), 1)
n[4] = round(((e/size(df)) * 100), 1)
n[5] = round(((f/size(df)) * 100), 1)

print(n)
		

	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 10:34:31) 
-- CODE:
from numpy import *
df = array(eval(input("dias que faltou: ")))

a = 0
b = 0
c = 0
d = 0
i = 0
f = 0

n = zeros(6, dtype = int)

for e in range(size(df)):
	if(df[e] == 2):
		a = a + 1
	elif(df[e] == 3):
		b = b + 1	
	elif(df[e] == 4):
		c = c + 1	
	elif(df[e] == 5):
		d = d + 1	
	elif(df[e] == 6):
		i = i + 1	
	elif(df[e] == 7):
		f = f + 1
		
n[0] = round(((a/size(df)) * 100), 1)
n[1] = round(((b/size(df)) * 100), 1)
n[2] = round(((c/size(df)) * 100), 1)
n[3] = round(((d/size(df)) * 100), 1)
n[4] = round(((e/size(df)) * 100), 1)
n[5] = round(((f/size(df)) * 100), 1)

print(n)
		

	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 10:35:24) 
-- CODE:
from numpy import *
df = array(eval(input("dias que faltou: ")))

a = 0
b = 0
c = 0
d = 0
i = 0
f = 0

n = zeros(6, dtype = int)

for e in range(size(df)):
	if(df[e] == 2):
		a = a + 1
	elif(df[e] == 3):
		b = b + 1	
	elif(df[e] == 4):
		c = c + 1	
	elif(df[e] == 5):
		d = d + 1	
	elif(df[e] == 6):
		i = i + 1	
	elif(df[e] == 7):
		f = f + 1
		
n[0] = round(((a/size(df)) * 100), 1)
n[1] = round(((b/size(df)) * 100), 1)
n[2] = round(((c/size(df)) * 100), 1)
n[3] = round(((d/size(df)) * 100), 1)
n[4] = round(((e/size(df)) * 100), 1)
n[5] = round(((f/size(df)) * 100), 1)

print(n)
		

	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 10:35:39) 
-- CODE:
from numpy import *
df = array(eval(input("dias que faltou: ")))

a = 0
b = 0
c = 0
d = 0
i = 0
f = 0

n = zeros(6, dtype = int)

for e in range(size(df)):
	if(df[e] == 2):
		a = a + 1
	elif(df[e] == 3):
		b = b + 1	
	elif(df[e] == 4):
		c = c + 1	
	elif(df[e] == 5):
		d = d + 1	
	elif(df[e] == 6):
		i = i + 1	
	elif(df[e] == 7):
		f = f + 1
		
n[0] = round(((a/size(df)) * 100), 1)
n[1] = round(((b/size(df)) * 100), 1)
n[2] = round(((c/size(df)) * 100), 1)
n[3] = round(((d/size(df)) * 100), 1)
n[4] = round(((e/size(df)) * 100), 1)
n[5] = round(((f/size(df)) * 100), 1)

	print(n)
		

	

-- ERROR:
File "XXXX", line 34
    print(n)
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 10:37:04) 
-- CODE:
from numpy import *
df = array(eval(input("dias que faltou: ")))

a = 0
b = 0
c = 0
d = 0
i = 0
f = 0

n = zeros(6, dtype = int)

for e in range(size(df)):
	if(df[e] == 2):
		a = a + 1
	elif(df[e] == 3):
		b = b + 1	
	elif(df[e] == 4):
		c = c + 1	
	elif(df[e] == 5):
		d = d + 1	
	elif(df[e] == 6):
		i = i + 1	
	elif(df[e] == 7):
		f = f + 1
		
n[0] = round(((a/size(df)) * 100), 1)
n[1] = round(((b/size(df)) * 100), 1)
n[2] = round(((c/size(df)) * 100), 1)
n[3] = round(((d/size(df)) * 100), 1)
n[4] = round(((e/size(df)) * 100), 1)
n[5] = round(((f/size(df)) * 100), 1)

print(n)
		

	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 10:37:16) 
-- CODE:
from numpy import *
df = array(eval(input("dias que faltou: ")))

a = 0
b = 0
c = 0
d = 0
i = 0
f = 0

n = zeros(6, dtype = int)

for e in range(size(df)):
	if(df[e] == 2):
		a = a + 1
	elif(df[e] == 3):
		b = b + 1	
	elif(df[e] == 4):
		c = c + 1	
	elif(df[e] == 5):
		d = d + 1	
	elif(df[e] == 6):
		i = i + 1	
	elif(df[e] == 7):
		f = f + 1
		
n[0] = round(((a/size(df)) * 100), 1)
n[1] = round(((b/size(df)) * 100), 1)
n[2] = round(((c/size(df)) * 100), 1)
n[3] = round(((d/size(df)) * 100), 1)
n[4] = round(((e/size(df)) * 100), 1)
n[5] = round(((f/size(df)) * 100), 1)

print(n)
		

	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 10:37:34) 
-- CODE:
from numpy import *
df = array(eval(input("dias que faltou: ")))

a = 0
b = 0
c = 0
d = 0
i = 0
f = 0

n = zeros(6, dtype = int)

for e in range(size(df)):
	if(df[e] == 2):
		a = a + 1
	elif(df[e] == 3):
		b = b + 1	
	elif(df[e] == 4):
		c = c + 1	
	elif(df[e] == 5):
		d = d + 1	
	elif(df[e] == 6):
		i = i + 1	
	elif(df[e] == 7):
		f = f + 1
		
	n[0] = round(((a/size(df)) * 100), 1)
	n[1] = round(((b/size(df)) * 100), 1)
	n[2] = round(((c/size(df)) * 100), 1)
	n[3] = round(((d/size(df)) * 100), 1)
	n[4] = round(((e/size(df)) * 100), 1)
	n[5] = round(((f/size(df)) * 100), 1)

print(n)
		

	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 10:38:18) 
-- CODE:
from numpy import *
df = array(eval(input("dias que faltou: ")))

a = 0
b = 0
c = 0
d = 0
i = 0
f = 0

n = zeros(6, dtype = int)

for e in range(size(df)):
	if(df[e] == 2):
		a = a + 1
	elif(df[e] == 3):
		b = b + 1	
	elif(df[e] == 4):
		c = c + 1	
	elif(df[e] == 5):
		d = d + 1	
	elif(df[e] == 6):
		i = i + 1	
	elif(df[e] == 7):
		f = f + 1
		
n[0] = round(((a/size(df)) * 100), 1)
n[1] = round(((b/size(df)) * 100), 1)
n[2] = round(((c/size(df)) * 100), 1)
n[3] = round(((d/size(df)) * 100), 1)
n[4] = round(((e/size(df)) * 100), 1)
n[5] = round(((f/size(df)) * 100), 1)

print(n)
		

	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 10:39:29) 
-- CODE:
from numpy import *
df = array(eval(input("dias que faltou: ")))

a = 0
b = 0
c = 0
d = 0
i = 0
f = 0

n = zeros(6, dtype = float)

for e in range(size(df)):
	if(df[e] == 2):
		a = a + 1
	elif(df[e] == 3):
		b = b + 1	
	elif(df[e] == 4):
		c = c + 1	
	elif(df[e] == 5):
		d = d + 1	
	elif(df[e] == 6):
		i = i + 1	
	elif(df[e] == 7):
		f = f + 1
		
n[0] = round(((a/size(df)) * 100), 1)
n[1] = round(((b/size(df)) * 100), 1)
n[2] = round(((c/size(df)) * 100), 1)
n[3] = round(((d/size(df)) * 100), 1)
n[4] = round(((e/size(df)) * 100), 1)
n[5] = round(((f/size(df)) * 100), 1)

print(n)
		

	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 10:39:55) 
-- CODE:
from numpy import *
df = array(eval(input("dias que faltou: ")))

a = 0
b = 0
c = 0
d = 0
i = 0
f = 0

n = zeros(6, dtype = float)

for e in range(size(df)):
	if(df[e] == 2):
		a = a + 1
	elif(df[e] == 3):
		b = b + 1	
	elif(df[e] == 4):
		c = c + 1	
	elif(df[e] == 5):
		d = d + 1	
	elif(df[e] == 6):
		i = i + 1	
	elif(df[e] == 7):
		f = f + 1
		
n[0] = round(((a/size(df)) * 100), 1)
n[1] = round(((b/size(df)) * 100), 1)
n[2] = round(((c/size(df)) * 100), 1)
n[3] = round(((d/size(df)) * 100), 1)
n[4] = round(((i/size(df)) * 100), 1)
n[5] = round(((f/size(df)) * 100), 1)

print(n)
		

	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-11 10:40:06) 
-- CODE:
from numpy import *
df = array(eval(input("dias que faltou: ")))

a = 0
b = 0
c = 0
d = 0
i = 0
f = 0

n = zeros(6, dtype = float)

for e in range(size(df)):
	if(df[e] == 2):
		a = a + 1
	elif(df[e] == 3):
		b = b + 1	
	elif(df[e] == 4):
		c = c + 1	
	elif(df[e] == 5):
		d = d + 1	
	elif(df[e] == 6):
		i = i + 1	
	elif(df[e] == 7):
		f = f + 1
		
n[0] = round(((a/size(df)) * 100), 1)
n[1] = round(((b/size(df)) * 100), 1)
n[2] = round(((c/size(df)) * 100), 1)
n[3] = round(((d/size(df)) * 100), 1)
n[4] = round(((i/size(df)) * 100), 1)
n[5] = round(((f/size(df)) * 100), 1)

print(n)
		

	

-- EXECUTION TIME:
0.954422
-- TEST CASE 1:
---- input:
[2,2,2,5,5,5,6,6,6,6,7,7,7,7,7,7]
---- correct output:
[18.8 0. 0. 18.8 25. 37.5]
---- user output:
[18.8  0.   0.  18.8 25.  37.5]
-- TEST CASE 2:
---- input:
[2,3,3,4,4,4,4,5,5,5,5,5,6,6,6,6,6,7,7,7,7,7,7,7,7]
---- correct output:
[ 4. 8. 16. 20. 20. 32.]
---- user output:
[ 4.  8. 16. 20. 20. 32.]
-- TEST CASE 3:
---- input:
[2,2,3,4,4,4,5,6,6,7,7,7,7]
---- correct output:
[15.4 7.7 23.1 7.7 15.4 30.8]
---- user output:
[15.4  7.7 23.1  7.7 15.4 30.8]
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
